Ajout information interface

--- a/chunk/index.html
+++ b/chunk/index.html
@@ -4,9 +4,18 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + TS</title>
+    <title>Uploads Chunk</title>
   </head>
-  <body>
+  <body style="max-width: 650px; margin: 0 auto; padding: 1rem;">
+    <h1 style="color: #999;">
+      Chunk Uploads
+    </h1>
+    <p style="color: #999;">
+      Tous les fichiers télécharger seront disponible dans le dossier <em>upload/uploads</em>
+      - 
+      Partie Backend
+    </p>
+    <hr/>
     <div>
       <input type="file" id="file" />
       <div id="video-infos"></div>
